@@ -4,6 +4,7 @@ cm4all-beng-proxy (0.6.17) unstable; urgency=low
   * python: accept address list in the ajp() method
   * http-server: added timeout for the HTTP request headers
   * response: close template when the content type is wrong
+  * delegate-get: implemented response headers
 
  --
 
